<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/headerLeftIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginLeft="0.6dp"
        android:padding="14dp"
        android:scaleType="center"
        android:layout_gravity="top"
        android:src="@drawable/nav_back_selector" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="156dp"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.6dp"
        android:text="@string/str_main_activity_subtitle"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_live"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="54.6dp"
        android:background="@drawable/select_play_type_button_bg"
        android:text="@string/str_main_activity_btn_live"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_vod"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/select_play_type_button_bg"
        android:text="@string/str_main_activity_btn_vod"
        android:textColor="@color/white"
        android:textSize="18dp" />
</LinearLayout>


