<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="59.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_iv_bid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14.6dp"
                    android:src="@drawable/bid" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.3dp"
                    android:layout_toRightOf="@+id/s_iv_bid"
                    android:text="@string/str_config_business_id"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_busuness_id"
                    style="@style/edittext_config_input"
                    android:text="@string/config_bid" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#99eeeeee"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="59.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_iv_cid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14.6dp"
                    android:src="@drawable/cid" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.3dp"
                    android:layout_toRightOf="@+id/s_iv_cid"
                    android:text="@string/str_config_channel_id"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_channel_id"
                    style="@style/edittext_config_input"
                    android:text="@string/config_player_live_cid" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#99eeeeee"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="59.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_iv_sn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14.6dp"
                    android:src="@drawable/sn" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.3dp"
                    android:layout_toRightOf="@+id/s_iv_sn"
                    android:text="@string/str_config_sn"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <!--
                    android:ellipsize="marquee"-->
                <EditText
                    android:id="@+id/et_sn"
                    style="@style/edittext_config_input"
                    android:text="@string/config_player_live_sn" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7.6px"
                android:background="#f8f8f8"
                android:visibility="visible"></View>


            <RelativeLayout
                android:id="@+id/layout_sn_list"
                android:layout_width="match_parent"
                android:layout_height="59.3dp"
                android:orientation="horizontal"
                android:visibility="visible">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14.6dp"
                    android:text="@string/str_config_source_list"
                    android:textColor="#333333"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14.6dp"
                    android:src="@drawable/arrow_90" />

                <TextView
                    android:id="@+id/tv_source_list_unfold"
                    android:layout_width="21.6dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="36.3dp"
                    android:text="@string/str_config_source_list_flod"
                    android:textColor="#999999"
                    android:textSize="10sp" />
            </RelativeLayout>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#99eeeeee"
                android:visibility="visible"></View>

            <com.qihoo.videocloud.view.ExpandableHeightListView
                android:id="@+id/lv_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:divider="#99eeeeee"
                android:dividerHeight="1.3dp"
                android:listSelector="@android:color/transparent"></com.qihoo.videocloud.view.ExpandableHeightListView>


            <View
                android:layout_width="match_parent"
                android:layout_height="23px"
                android:background="#f8f8f8"></View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_gravity="left"
                android:layout_marginLeft="14.6dp"
                android:gravity="center_vertical"
                android:text="@string/str_config_decoded_mode"
                android:textColor="#333333"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#99eeeeee"></View>

            <RadioGroup
                android:id="@+id/rg_decoded_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_config_decoded_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="49.3dp"
                    android:button="@drawable/point_selector"
                    android:enabled="false"
                    android:paddingLeft="7dp"
                    android:text="@string/str_config_decoded_auto"
                    android:textColor="@drawable/radiobutton_text_config_decoded_type"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rb_config_decoded_soft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/point_selector"
                    android:checked="true"
                    android:paddingLeft="7dp"
                    android:text="@string/str_config_decoded_soft"
                    android:textColor="@drawable/radiobutton_text_config_decoded_type"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13.3dp"
        android:src="@drawable/play_big" />
</RelativeLayout>


